Adapt findAllUsers from UserService to new response from api-users, add restrictions to sort by field option, fix naming issues